--- a/Kapitel3/Eksperiment1.tex
+++ b/Kapitel3/Eksperiment1.tex
@@ -1,4 +1,3 @@
-\pagebreak
 \section{Forsøg: Svingning af lod i luft i kort tid}
 
 \subsection{Forsøgsbeskrivelse}
@@ -96,7 +95,7 @@ Det tilføjede $s_0$ for enden skyldes at loddet har hængt en afstand over ultr
 I tabel \ref{tabel: bestfitkurver forsog 1} kan ses værdier for $A, \sqrt{\frac{k}{m}}, \phi ,s_0$ og så den gennemsnitlige afvigelse målt i meter (RMSE).
 
 
-\begin{table}
+\begin{table}[h]
 \centering
 \begin{tabular}{|l|c|c|c|c|c|}
 \hline
@@ -117,6 +116,8 @@ I tabel \ref{tabel: bestfitkurver forsog 1} kan ses værdier for $A, \sqrt{\frac
 \label{tabel: bestfitkurver forsog 1}
 \end{table}
 
+\subsubsection{Teoretisk bestemmelse af loddets masse}
+
 \subsubsection{Vurdering af data}
 Det første der er værd at bemærke, er at værdierne af $\sqrt{\frac{k}{m}}$ ligger meget tæt på hinanden. 
 Dette stemmer godt overens med teorien da denne værdi ikke bør være afhængig af hvor meget der energi der bliver tilførst systemet til at starte med, men kun hvilken masse lodet har og hvilken fjederkonstant fjederen har. 
@@ -127,6 +128,7 @@ Da forsøget er lavet med samme fjeder og samme lod, må man forvente samme vær
 Derudover er det værd at bemærke de meget lave afvigelser. 
 Den gennemsnitlige afvigelse ligger imellem $0.3136cm$ og $0.4427cm$ i forhold til amplituder på helt op til $8.944cm$. 
 Dette må anses som forholdsvist små afvigelser i forhold til hele bevægelsen.
+
 
 \subsection{Konklusion}
 
