Begyndte på beskrivelse af exp2

--- a/Kapitel3/Eksperiment1.tex
+++ b/Kapitel3/Eksperiment1.tex
@@ -1,6 +1,6 @@
 \section{Forsøg: Svingning af lod i luft i kort tid}
 
-\subsection{Forsøgsbeskrivelse}
+\subsection{Forsøgsbeskrivelse}\label{exp1: Beskrivelse af experiment}
 \subsubsection{Materialer}
 \begin{wrapfigure}{r}{0.4\textwidth}
 \centering
