--- a/Kapitel3/Eksperiment2.tex
+++ b/Kapitel3/Eksperiment2.tex
@@ -1,8 +1,12 @@
 \section{Forsøg: Svingning af lod i luft i længere tid}
 
 \subsection{Forsøgsbeskrivelse}
+Dette forsøg forløber nøjagtigt på samme måde som forsøg 1 (se forsøgsbeskrivelse \ref{exp1: Beskrivelse af experiment})
+
 
 \subsection{Hypotese}
+
+\subsection{Data}
 
 \subsection{Databehandling}
 
