Gemte grundet alarm om genstart

--- a/Kapitel3/Eksperiment1.tex
+++ b/Kapitel3/Eksperiment1.tex
@@ -34,7 +34,7 @@ Derefter har jeg sat loddet i svingninger og målt loddets position med ultralyd
 Jeg gentog dette forsøg 10 gange. 
 
 
-\subsection{Hypotese}
+\subsection{Hypotese}\label{exp1: Hypotese}
 Da dette forsøg forløber over forholdsvist kort tid, forventer jeg at man betragte denne bevægelse som om den ikke er dæmpet, da dæmpningsledet vil være forholdvist småt. 
 Dermed forventes differentialligningen 
 $$m\cdot x'' = -k \cdot x$$
