--- a/Kapitel3/Eksperiment2.tex
+++ b/Kapitel3/Eksperiment2.tex
@@ -1,10 +1,24 @@
 \section{Forsøg: Svingning af lod i luft i længere tid}
 
 \subsection{Forsøgsbeskrivelse}
-Dette forsøg forløber nøjagtigt på samme måde som forsøg 1 (se forsøgsbeskrivelse \ref{exp1: Beskrivelse af experiment})
+Dette forsøg forløber nøjagtigt på samme måde som forsøg 1 (se forsøgsbeskrivelse \ref{exp1: Beskrivelse af experiment}).
+Der er dog den forskel at forsøget forløber over $50$ sekunder.
 
+Jeg gør brug af samme fjeder og lod som i forsøg 1.
 
 \subsection{Hypotese}
+Da dette forsøg forløber over længere tid end det forrige forsøg, forventes det at vindmodstanden vil spille en markant rolle. 
+Derfor vil vi forvente at det følger en anden differentialligning hvor dæmpningsledet er med, nemlig:
+$m\cdot x''= -\mu \cdot x' - k\cdot x$
+eller omskrevet til den form som vi har behandlet matematisk:
+$$x''+ \frac{\mu}{m} \cdot x' + \frac{k}{m}\cdot x=0$$
+Dette kan vi  se er en andenordens homogen lineær differentialligning.
+Vi kan derfor opskrive en karakterligning for den:
+$r^2 + \frac{\mu}{m} r + \frac{k}{m} = 0$, med rødderne $r = \dfrac{-\frac{\mu}{m} \pm \sqrt{\frac{\mu^2}{m^2}-4\frac{k}{m}}}{2}$.
+Vi vil nu gerne bruge disse rødder til at opskrive en forventet funktion til beskrivelse af bevægelsen. 
+Dog har vi det problem at vi ikke ved om rødderne bliver komplekse eller reelle, da dette afhænger af hvor stor en værdi $\mu$ er i forhold til $k$.
+Hvis vi har at størrelsen $\frac{\mu^2}{m^2}-4\frac{k}{m}$ er positiv, så må vi have reelle rødder, hvorimod vi må have komplekse hvis den er negativ. 
+Der er selvfølgelig også grænsetilfældet hvor det er lig 0, men da dette er højest usandsynligt vil jeg ikke behandle dette. 
 
 \subsection{Data}
 
