Skrev hypotese til forsøg 2

--- a/Kapitel3/Eksperiment2.tex
+++ b/Kapitel3/Eksperiment2.tex
@@ -2,7 +2,7 @@
 
 \subsection{Forsøgsbeskrivelse}
 Dette forsøg forløber nøjagtigt på samme måde som forsøg 1 (se forsøgsbeskrivelse \ref{exp1: Beskrivelse af experiment}).
-Der er dog den forskel at forsøget forløber over $50$ sekunder.
+Der er dog den forskel at forsøget forløber over $50$ sekunder og at forsøget kun er gentaget 5 gange. 
 
 Jeg gør brug af samme fjeder og lod som i forsøg 1.
 
@@ -14,12 +14,18 @@ eller omskrevet til den form som vi har behandlet matematisk:
 $$x''+ \frac{\mu}{m} \cdot x' + \frac{k}{m}\cdot x=0$$
 Dette kan vi  se er en andenordens homogen lineær differentialligning.
 Vi kan derfor opskrive en karakterligning for den:
-$r^2 + \frac{\mu}{m} r + \frac{k}{m} = 0$, med rødderne $r = \dfrac{-\frac{\mu}{m} \pm \sqrt{\frac{\mu^2}{m^2}-4\frac{k}{m}}}{2}$.
+$r^2 + \frac{\mu}{m} r + \frac{k}{m} = 0$, med rødderne $r = \dfrac{-\frac{\mu}{m} \pm \sqrt{\frac{\mu^2}{m^2}-4\frac{k}{m}}}{2}=
+-\frac{\mu}{2m}  \pm   \frac{\sqrt{-\frac{\mu^2}{m^2}+4\frac{k}{m}}}{2}$.
 Vi vil nu gerne bruge disse rødder til at opskrive en forventet funktion til beskrivelse af bevægelsen. 
 Dog har vi det problem at vi ikke ved om rødderne bliver komplekse eller reelle, da dette afhænger af hvor stor en værdi $\mu$ er i forhold til $k$.
 Hvis vi har at størrelsen $\frac{\mu^2}{m^2}-4\frac{k}{m}$ er positiv, så må vi have reelle rødder, hvorimod vi må have komplekse hvis den er negativ. 
-Der er selvfølgelig også grænsetilfældet hvor det er lig 0, men da dette er højest usandsynligt vil jeg ikke behandle dette. 
+Der er selvfølgelig også grænsetilfældet hvor det er lig $0$, men da dette er højest usandsynligt vil jeg ikke behandle dette. 
 
+Da vi skal opstille en hypotese, vil det være forventeligt at rødderne er komplekse. 
+Dette fordi vi i forsøg 1 gjorde præcis det samme som her og så at en model med komplekse rødder så ud til at fungere. 
+
+I det vores løsninger til karakterligningen forventes at være komplekse, kan vi da forvente en bevægelse der kan beskrives ved:
+$$e^{-\frac{\mu}{2m} \cdot x}A\sin(\frac{\sqrt{-\frac{\mu^2}{m^2}+4\frac{k}{m}}}{2} \cdot x+\phi)$$
 \subsection{Data}
 
 \subsection{Databehandling}
