Tilføjede rådata til forsøg 2

--- a/Kapitel3/Eksperiment2.tex
+++ b/Kapitel3/Eksperiment2.tex
@@ -27,6 +27,8 @@ Dette fordi vi i forsøg 1 gjorde præcis det samme som her og så at en model m
 I det vores løsninger til karakterligningen forventes at være komplekse, kan vi da forvente en bevægelse der kan beskrives ved:
 $$e^{-\frac{\mu}{2m} \cdot x}A\sin(\frac{\sqrt{-\frac{\mu^2}{m^2}+4\frac{k}{m}}}{2} \cdot x+\phi)$$
 \subsection{Data}
+Rådata til dette forsøg er vedlagt i filen ''Forsøg 2 - Data.pdf'' og data til bestemmelse af fjederkonstanten ligger i filen ''Forsøg 1 og 2 fjederkonstant - Data.pdf''. 
+
 
 \subsection{Databehandling}
 
