Added labels to exp1

--- a/Kapitel3/Eksperiment1.tex
+++ b/Kapitel3/Eksperiment1.tex
@@ -50,17 +50,17 @@ $$x(t)=A\sin (\frac{k}{m}t+\phi)$$
 hvor $\phi$ er en eller anden konstant. 
 
 
-\subsection{Data}
+\subsection{Data}\label{exp1: Data}
 \subsubsection{Svingning}
 Data til dette forsøg er vedlagt som bilag i filen ''Forsøg 1 - Data.pdf''
 Denne fil indeholder alt rådata opsamlet af ultralydsensoren i de 10 forsøg (OBS. filen er $130$ sider lang da der er blevet opsamlet $40$ målinger i sekundet). 
 Forsøg nummer 10 er placeret først grundet måden mit dataopsamlingsprogram fungerer på.
 
-\subsubsection{Fjederkonstant}
+\subsubsection{Fjederkonstant}\label{exp1: Fjederkonstant}
 Ydermere er der vedlagt en fil ved navn ''Forsøg 1 og 2 fjederkonstant - Data.pdf''.
 Denne fil indeholder data til bestemmelse af fjederkonstanten. 
 
-\subsubsection{Masse af fjeder og lod}
+\subsubsection{Masse af fjeder og lod}\label{exp1: Masse af fjeder og lod}
 Jeg har målt massen af lodet og af fjederen i forbindelse med forsøget. 
 Disse to er nedskrevet i tabel \ref{tabel: Masser forsog 1}.
 \begin{table}[h]
@@ -78,7 +78,7 @@ Lod & $32.45$ \\
 \label{tabel: Masser forsog 1}
 \end{table}
 
-\subsection{Databehandling}
+\subsection{Databehandling}\label{exp1: databehandling afsnit}
 \subsubsection{Fjederkonstant}\label{databehandling: tyk fjeder fjederkonstant}
 For at finde en fjederkonstant for fjederen der bliver brugt til forøget, har jeg taget de sammenhørende værdier af fjederkraft og udstrækning og plottet dem i kraft som afhængig og udstrækning som uafhængig variabel. 
 Derefter har jeg lavet en best-fit lineær sammenhæng. 
@@ -88,7 +88,7 @@ Vi må da have fjederkonstanten som hældningen på dette plot, i dette tilfæld
 Den tilhørende graf samt best-fit plot kan ses i bilaget "Forsøg 1 - grafer.pdf". 
  
 
-\subsubsection{Best-fit kurver}
+\subsubsection{Best-fit kurver}\label{exp1: Best-fit kurver}
 For at tjekke hvor godt hypotesen holder, vil jeg forsøge at lægge få min computer til at lave en best-fit kurve udfra funktionen $x(t)=A\sin (\sqrt{\frac{k}{m}}+\phi) + s_0$.
 Det tilføjede $s_0$ for enden skyldes at loddet har hængt en afstand over ultralydsensoren som der skal justeres for. 
 
@@ -116,9 +116,9 @@ I tabel \ref{tabel: bestfitkurver forsog 1} kan ses værdier for $A, \sqrt{\frac
 \label{tabel: bestfitkurver forsog 1}
 \end{table}
 
-\subsubsection{Teoretisk bestemmelse af loddets masse}
+\subsubsection{Teoretisk bestemmelse af loddets masse}\label{exp1: teoretisk bestemmelse af loddets masse}
 
-\subsubsection{Vurdering af data}
+\subsubsection{Vurdering af data}\label{exp1: Vurdering af data}
 Det første der er værd at bemærke, er at værdierne af $\sqrt{\frac{k}{m}}$ ligger meget tæt på hinanden. 
 Dette stemmer godt overens med teorien da denne værdi ikke bør være afhængig af hvor meget der energi der bliver tilførst systemet til at starte med, men kun hvilken masse lodet har og hvilken fjederkonstant fjederen har. 
 Da forsøget er lavet med samme fjeder og samme lod, må man forvente samme værdi, hvilket også er det vi observerer, da der kun er en forskel på $7.734s^{-1}-7.632s^{-1}=0.102s^{-1}$ på den største og mindste værdi, hvilket er relativt lidt i forhold til de ca. 7 en halv tallene ligger på.
