--- a/Kapitel3/Eksperiment1.tex
+++ b/Kapitel3/Eksperiment1.tex
@@ -1,4 +1,4 @@
-\section{Forsøg: Svingning af lod i luft i kort tid}
+\section{Forsøg: Svingning af lod i luft i kort tid}\label{exp1: Forsog 1 - hele afsnittet}
 
 \subsection{Forsøgsbeskrivelse}\label{exp1: Beskrivelse af experiment}
 \subsubsection{Materialer}
@@ -22,7 +22,7 @@ Disse materialer blev brugt til forsøget:
 	\item Computer til opsamling af data
 \end{itemize}
 
-\subsubsection{Udførelse}
+\subsubsection{Udførelse}\label{exp1: Udforelse}
 
 
 
