Introduktion til databehandling af exp2

--- a/Kapitel3/Eksperiment2.tex
+++ b/Kapitel3/Eksperiment2.tex
@@ -6,7 +6,7 @@ Der er dog den forskel at forsøget forløber over $50$ sekunder og at forsøget
 
 Jeg gør brug af samme fjeder og lod som i forsøg 1.
 
-\subsection{Hypotese}
+\subsection{Hypotese}\label{exp2: Hypotese}
 Da dette forsøg forløber over længere tid end det forrige forsøg, forventes det at vindmodstanden vil spille en markant rolle. 
 Derfor vil vi forvente at det følger en anden differentialligning hvor dæmpningsledet er med, nemlig:
 $m\cdot x''= -\mu \cdot x' - k\cdot x$
@@ -29,8 +29,17 @@ $$e^{-\frac{\mu}{2m} \cdot x}A\sin(\frac{\sqrt{-\frac{\mu^2}{m^2}+4\frac{k}{m}}}
 \subsection{Data}
 Rådata til dette forsøg er vedlagt i filen ''Forsøg 2 - Data.pdf'' og data til bestemmelse af fjederkonstanten ligger i filen ''Forsøg 1 og 2 fjederkonstant - Data.pdf''. 
 
+Dataen er præsenteret på præcis samme måde som i forsøg 1, se derfor afsnit \ref{exp1: Best-fit kurver} for forklaring af dataopsætning.
+
+
 
 \subsection{Databehandling}
+For at tjekke om dataen rent faktisk opfører sig som opfører sig som forventet, vil jeg forsøge at lave best-fit kurver på formen:
+$$e^a \cdot A \cdot \sin (bx+\phi)+s_0$$
+Her står $a$ i stedet for konstanten $-\frac{\mu}{2m}$ og $b$ i stedet for 
+$\frac{\sqrt{-\frac{\mu^2}{m^2}+4\frac{k}{m}}}{2}$.
+Desuden er $s_0$ lagt til for at tage højde for at loddet hænger et stykke over sensoren.
+
 
 \subsection{Konklusion}
 
