Perspektivering skrevet bby

--- a/bibliografi.tex
+++ b/bibliografi.tex
@@ -32,6 +32,9 @@
   Kalkulus (3. udgave). 
   Oslo,
   Universitetsforlaget
-  
+ 
+\bibitem{Bil-fjeder}
+ (5. juli 2014), Broken suspension in Audi Coupe (Eibach or Bilstein). Hentet fra:
+ \url{https://www.youtube.com/watch?v=EselFupQdGs}
   
 \end{thebibliography}
