--- a/referencekommandoer.sty
+++ b/referencekommandoer.sty
@@ -4,3 +4,5 @@
 \newcommand{\refMekanik}[1]{\footnote{Christiansen, Both og Østergaard , 2002, s. #1 \cite{Mekanik} }}
 \newcommand{\refDTUKompleks}[1]{\footnote{Komplekse tal, 2016, sætning #1 \cite{DTU-Kompleks}}}
 \newcommand{\refKalkulus}[1]{\footnote{Lindstrøm , 2006, s. #1 \cite{Kalkulus} }}
+\newcommand{\refBilVideo}{\footnote{Broken suspension in Audi Coupe (Eibach or Bilstein)
+ , 2014 \cite{Bil-fjeder} }}
