Skrev databehandling med numeriske løsninger

--- a/Kapitel2/IkkeLinear.tex
+++ b/Kapitel2/IkkeLinear.tex
@@ -1,4 +1,5 @@
 \subsection{Den ikke-lineære andenordens homogene differentialligning}
+\label{teori: Den ikke-linear andenordens ligning}
 I det vi indtil videre kun har kigget på den andenordens \textit{lineære} \textit{homogene} differentialligning, har vi lavet nogle antagelser som gør matematikken pæn, men disse holder dog ofte ikke i fysikkens verden.
 Hvis man ser tilbage på afsnit \ref{teori:vindmodstand} om vindmodstand, har vi faktisk kun lavet matematisk teori der beskriver bevægelse ved lave hastigheder, da vi kun har kigget på når dæmpningsledet er i første. 
 I afsnittet er det også beskrevet hvordan man ved høje hastigheder nærmere får at vindmodstanden er i anden.
