--- a/Kapitel3/Eksperiment2.tex
+++ b/Kapitel3/Eksperiment2.tex
@@ -74,7 +74,52 @@ der kan ses et eksempel på dette på figur \ref{fig: Fejlkurve exp2}.
 
 Grunden til den forskel som ses på figur \ref{fig: Fejlkurve exp2}, er formentlig af vores model for vindmodstanden ikke er helt god nok. 
 Med den teori vi har om vindmodstand fra afsnit \ref{teori:vindmodstand}, vil det være et logisk gæt at sige at vi skal have en anden eksponent på vindmodstanden end 1. 
-Dette vil kan man forsøge på ved at lave en numerisk løsning til differentialligningen. 
+
+Da teorien siger at vi bør have en eksponent på 2, kan denne forskel måske tilskrives at modellen ikke har den rigtige eksponent.
+Vi kan dog ikke, som vi så i afsnit \ref{teori: Den ikke-linear andenordens ligning}, kan vi ikke finde en symbolsk løsning til ligningen med eksponent 2, og vi kan derfor ikke lave et curve-fit. 
+Vi kan dog godt lave numeriske løsninger for de to modeller hvor deres koefficienter er de samme, og så observere om modellen med potens på opfører sig på samme måde i forhold til den lineære model som mit data gør i forhold til den lineære model.
+
+Den lineære model vi vil kigge på vil klart nok være på nedenstående form, da det er denne vi har kigget på hele vejen igennem:
+
+\begin{equation}
+mx'' + \mu x' + kx = 0
+\label{eq: standard linear diff}
+\end{equation}
+ 
+
+Før vi kan opsætte en den ikke-lineære differentialligningsmodel, er vi nødt til at tackle det problem der opstår i at vi mister fortegnet på $x'$ i det at vi sætter det i anden.
+Dette problem kan vi løse med at gange størrelsen $\frac{x'}{|x'|}$ på leddet. 
+Denne størrelse har egenskaben at den er positiv hvis $x'$ er positiv og negativ hvis $x'$ er negativ. 
+Det eneste problem det skaber er at størrelsen er udefineret når $x'=0$, men dette er ikke et stort problem når man laver numeriske løsninger, da man med meget lille sandsynlighed vil ramme netop 0, men oftere nogle meget lange kommatal. 
+
+Vi kan nu opsætte den ikke-lineære differentialligning, hvor $x'$ er sat i anden potens:
+
+\begin{equation}
+mx'' + \frac{x'}{|x'|} \mu  (x')^2 + kx = 0
+\label{eq: diff i anden}
+\end{equation}
+
+Derudover skal vi bruge nogle startværdier for $x$ og $x'$ for at kunne lave en numerisk løsning.
+Vi kan tænke os frem til en startværdi for $x'$, da loddet ikke har en fart inden vi giver slip på loddet. 
+Startværdien af $x$ svarer til den mængde vi har hevet loddet ud fra sin udgangsposition. 
+Da vi kun vil undersøge hvordan de to kurver forholder sig til hinanden, er det ikke så vigtigt hvad vi starter med, og jeg sætter derfor bare værdien til $10$.
+
+For at kunne lave den numeriske løsning, skal vi nu bare have nogle værdier af $m,k$ og $\mu$. 
+Jeg vælger disse så de minder om det jeg har fundet i min databehandling. 
+På figur \ref{fig: numeriske solutions} kan man se de numeriske løsninger. 
+
+\begin{figure}[h]
+\centering
+\includegraphics[scale=0.5]{Figurer/diffligninger}
+\caption{Sammenligning af numeriske løsninger for differentialligninger \ref{eq: standard linear diff}(blå) og \ref{eq: diff i anden}(rød) et stykke henne ad 1.-aksen, med $m=50,k=3.6,\mu=2$}
+\label{fig: numeriske solutions}
+
+\end{figure}
+
+Hvis vi nu betragter figur \ref{fig: Fejlkurve exp2} med figur \ref{fig: numeriske solutions}, så ser vi at de er meget ens. 
+Den blå kurve der har det mindste udsving ligner selvfølgelig best-fit-kurven på figur \ref{fig: Fejlkurve exp2}, da de er dannet fra den samme differentialligning. 
+Det der er interessant, er at den røde kurve forholder sig på den samme måde til den blå på figur \ref{fig: numeriske solutions}, som mit data forholder sig til best-fit-kurven på figur \ref{fig: Fejlkurve exp2}. 
+Dette tyder nemlig på at den ikke-lineære model ville have kunnet beskrive mit datasæt bedre. 
 
 
 
