Konklusion til exp2

--- a/Kapitel3/Eksperiment2.tex
+++ b/Kapitel3/Eksperiment2.tex
@@ -126,5 +126,7 @@ Dette tyder nemlig på at den ikke-lineære model ville have kunnet beskrive mit
 
 
 \subsection{Konklusion}
-
+Den lineære homogene andenordens differentialligning er en forholdsvist god model til at beskrive bevægelsen, men den er ikke perfekt. 
+Den kurve der produceres fra differentialligningen har træk der minder meget om den rigtige kurve, men jo længere tid der går, jo dårligere viser det sig at den beskriver bevægelsen. 
+Det viser sig også at ikke-lineær differentialligningsmodel hvor dæmpningsledet er i anden, beskriver bevægelsen bedre, specielt når vi kigger på svingninger i længere tid.
 
