--- a/Kapitel3/Eksperiment1.tex
+++ b/Kapitel3/Eksperiment1.tex
@@ -116,7 +116,25 @@ I tabel \ref{tabel: bestfitkurver forsog 1} kan ses værdier for $A, \sqrt{\frac
 \label{tabel: bestfitkurver forsog 1}
 \end{table}
 
-\subsubsection{Teoretisk bestemmelse af loddets masse}\label{exp1: teoretisk bestemmelse af loddets masse}
+\subsubsection{Sammenligning af værdier af $\sqrt{\frac{k}{m}}$}\label{exp1: teoretisk bestemmelse af sqrt k over m}
+For at tjekke om konstanter tager de forventede værdier, vil jeg lave en sammenligning af værdien for $\sqrt{\frac{k}{m}}$ fundet ved best-fit-kurven og ved måling på fjeder og lod.
+
+Værdierne fra best-fit-kurven der kan ses i tabel \ref{tabel: bestfitkurver forsog 1}, er meget ens, og jeg vil derfor bare bruge et gennemsnit af dem. 
+Dette gennemsnit bliver da ca. $7.68s^{-1}$.
+
+Massen af loddet og fjederkonstanten har jeg begge bestemt individuelt. 
+Fjederkonstanten kender jeg som $3.6\frac{N}{m}$, hvilket ses længere oppe i dette afsnit. 
+Massen er lidt mindre ligetil. 
+Vi kender godt nok massen af loddet fra tabel \ref{tabel: Masser forsog 1}. 
+Der er dog det problem, at det ikke kun er loddet der svinger i bevægelsen, men også en del af fjederen. 
+I teorien er det ca. $\frac{1}{3}$ af fjederens masse der skal regnes med i bevægelsen\refFysA{300}.
+Vi kan derfor lave en masse $m=m_{lod}+\frac{1}{3}\cdot m_{fjeder}=32.45g+\frac{77.09g}{3}=58.15g$. 
+Dermed kan vi bestemme en værdi for $\sqrt{\frac{k}{m}}$ som:
+$$\sqrt{\frac{k}{m}}=\sqrt{\frac{3.6\frac{N}{m}}{58.15g}}=\sqrt{0.062\frac{\frac{N}{m}}{g}}=\sqrt{0.062\frac{1000\frac{g\cdot m}{s^2\cdot m}}{g}}=\sqrt{62s^{-2}}=7.87s^{-1}$$
+
+Disse to værdier ser ud til at stemme rimelig godt overens, da de har en forholdsvist lille differens. 
+
+
 
 \subsubsection{Vurdering af data}\label{exp1: Vurdering af data}
 Det første der er værd at bemærke, er at værdierne af $\sqrt{\frac{k}{m}}$ ligger meget tæt på hinanden. 
