Omskrev hastighed til fart

--- a/Kapitel1/1Baggrund.tex
+++ b/Kapitel1/1Baggrund.tex
@@ -67,7 +67,7 @@ Dermed er \LosEks den fuldstændige løsning til differentialligningen.
 
 \section{Nødvendig baggrundsteori udenfor pensum}
 \subsection{Vindmodstand}\label{teori:vindmodstand}
-Når et objekt bevæger sig gennem luft eller en væske med en hastighed $v$, vil det have en gnidning med luften omkring sig, hvilket vil gøre hastigheden mindre.
+Når et objekt bevæger sig gennem luft eller en væske med en fart $v$, vil det have en gnidning med luften omkring sig, hvilket vil gøre farten mindre.
 Ved et opslag i en formelsamling, ser man at kraften som vindmodstanden virker med, er proportional med farten i anden. 
-Ved lave hastigheder er dette dog næsten det samme som at den er proportional med hastigheden i første, og dette kan derfor være en okay antagelse af gøre sig i visse tilfælde\refMekanik{11}.
+Ved lave hastigheder er dette dog næsten det samme som at den er proportional med farten i første, og dette kan derfor være en okay antagelse af gøre sig i visse tilfælde\refMekanik{11}.
 %Ved lave hastigheder er denne formindskelse proportionel med hastigheden i første, men ved højere hastigheder vil den nærmere være proportional med hastigheden opløftet i anden potens\refMekanik{11}. 
