Skrev konklusion til exp 1

--- a/Kapitel3/Eksperiment1.tex
+++ b/Kapitel3/Eksperiment1.tex
@@ -46,7 +46,11 @@ Vi får da at løsningen skal være på formen (se afsnit \ref{teori: Komplekse 
 $$y(x) = e^{ax}A\sin(bx+\phi) \text{ hvor rødderne i karakterligningen er } r = a \pm bi$$
 Vi ser dog her at rødderne i vores karakterligning ikke har nogen realdel, og dermed får vi at $e^{ax}=e^{0x}=1$.
 Da $b=\sqrt{\frac{k}{m}}$ forventer vi derfor at bevægelsen vil kunne beskrives som 
-$$x(t)=A\sin (\frac{k}{m}t+\phi)$$
+\begin{equation}
+x(t)=A\sin (\frac{k}{m}t+\phi)
+\label{eq: exp1 hypotese}
+\end{equation}
+
 hvor $\phi$ er en eller anden konstant. 
 
 
@@ -147,7 +151,10 @@ Derudover er det værd at bemærke de meget lave afvigelser.
 Den gennemsnitlige afvigelse ligger imellem $0.3136cm$ og $0.4427cm$ i forhold til amplituder på helt op til $8.944cm$. 
 Dette må anses som forholdsvist små afvigelser i forhold til hele bevægelsen.
 
+Det ses også at værdien af $\sqrt{\frac{k}{m}}$ i den fundne best-fit kurver er meget end med den værdi man kan finde ved at veje lodet og bestemme fjederkonstanten. 
 
 \subsection{Konklusion}
-
+Dette forsøg passer enormt godt på teorien. 
+Der er høje forklaringsgrader ved brug af best-fit kurver og de værdier som kommer ud med de forskellige konstanter, passer godt overens med vores teori.
+Det forekommer derfor sandsynligt at bevægelsen tilnærmelsesvist opfylder hypotesen og dermed differentialligningen \ref{eq: exp1 hypotese}.
 
