Første udkast til abstract

--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-\documentclass[11pt,a4paper,openany]{book}
+\documentclass[11pt,a4paper,openany,draft]{book}
 \usepackage{preamble}
 \usepackage{opstilling}
 \usepackage{referencekommandoer}
@@ -8,6 +8,7 @@
 \begin{document}
 \maketitle
 \tableofcontents
+\input{abstract}
 
 \input{Kapitel1/1Baggrund}
 \input{Kapitel1/OpsatningBeskrivelse}
