--- a/preamble.sty
+++ b/preamble.sty
@@ -1,6 +1,6 @@
 \ProvidesPackage{preamble}
 \usepackage[utf8]{inputenc}
-\usepackage[danish]{babel}
+\usepackage[english, danish]{babel}
 \usepackage{amsmath}
 \usepackage{amsfonts}
 \usepackage{amssymb}
