Fixed spelling mistakes in abstract

--- a/abstract.tex
+++ b/abstract.tex
@@ -1,16 +1,16 @@
 \section*{Abstract}
 This report examines the harmonic motion of a spring. 
-It does this by examining the physical laws of springs and mechanical pyhisics more broadly. 
+It does this by examining the physical laws of springs and mechanical physics more broadly. 
 These laws are then used to propose a mathematical model of the motion of an object hanging in a spring.
 
 To easily solve these differential equations found in physics, this report examines them more generally. 
-It describes the complete solution to the second order linear homogeneus differential equation, and gives a partial proof that the solution proposed is the complete solution. 
+It describes the complete solution to the second order linear homogeneous differential equation, and gives a partial proof that the solution proposed is the complete solution. 
 
-Having explained how to solve the differential equation, it then examines experiments meant to test wether the model of differential equations proposed about the motion are acurate.
+Having explained how to solve the differential equation, it then examines experiments meant to test whether the model of differential equations proposed about the motion are accurate.
 
-Through 3 experiments it finds, that the second order linear homogeneus differential equation is a good description of the motion.
-However it also finds that the description is not perfect and then proposes an improvement of the model that makes the equations non-linear.
+Through 3 experiments it finds, that the second order linear homogeneous differential equation is a good description of the motion.
+However, it also finds that the description is not perfect and then proposes an improvement of the model that makes the equations non-linear.
 It argues why this improved model describes the motion better but it also shows why the model is a much harder mathematical problem to solve. 
 
-The report then examines how this physical model can be used to describe parts a car suspension system. 
+The report then examines how this physical model can be used to describe parts a car suspension system.
 
