--- a/Kapitel1/1Baggrund.tex
+++ b/Kapitel1/1Baggrund.tex
@@ -1,10 +1,21 @@
 \chapter{Introduktion af problemet}
-Jeg vil i denne opgave tage udgangspunkt i en bevægelse, som jeg vil forsøge at begrunde og beskrive. 
-For at dette er muligt, er jeg dog nødt til kort at introducere en smule af pensum fra gymnasiet, som vil blive brugt i mine udledninger. 
-Denne del af pensum vil jeg kun redegøre for, og jeg vil altså derfor ikke nødvendigvis efterprøve dem eksperimentelt eller forklare den mere teoretiske baggrund. 
-Den del der er matematik, vil jeg dog føre bevis for.
+Jeg vil i denne opgave tage udgangspunkt i den bevægelse et lod har når det hænges op i en fjeder og sættes i svingninger.
 
-\section{Nødvendig baggrundsteori fra pensum}
+Jeg vil forsøge at opstille en matematisk differentialligningsmodel der kan beskrive bevægelsen.
+Dernæst vil jeg forsøge at bruge denne model til at kunne beskrive direkte hvor loddet vil befinde sig til et bestemt tidspunkt. 
+Dette vil kræve at jeg kan løse de opsatte differentialligninger. 
+For at finde denne løsning, vil jeg behandle problemet mere generelt ved brug af matematisk analyse. 
+
+Jeg vil derefter udnytte de matematiske løsninger til at beskrive bevægelsen.
+Disse modeller vil jeg da prøve af eksperimentelt for at undersøge hvor godt de passer. 
+
+Til sidst vil jeg kigge på, hvordan den teori jeg er kommet frem til, kan bruges til at analysere affjedringen i en bil. 
+\vspace{1cm}
+
+For at kunne lave denne opgave, vil der blive brug for noget baggrundteori både fra fysikken og matematikken. 
+Denne er beskrevet nedenfor.
+
+\section{Nødvendig fysisk baggrundsteori}
 \subsection{Hooks lov}\label{teori:Hooks lov}
 Når man hiver i en fjeder, vil den have en kraft, modsatrettet den retning man hiver, der er proportional med hvor meget man har strukket fjederen\refFysA{286}. 
 Dette giver anledning til formlen 
@@ -16,6 +27,13 @@ $k$ kaldes i denne sammenhæng for fjederkonstanten.
 Newtons anden lov fortæller ud fra den kraft et objekt påvirkes med og dets masse, hvor stor meget objektet vil accelerere. 
 Den siger, at massen ganget med accelerationen af et objekt giver den kraft, som objektet bliver påvirket med\refFysA{217}.
 
+\subsection{Vindmodstand}\label{teori:vindmodstand}
+Når et objekt bevæger sig gennem luft eller en væske med en fart $v$, vil det have en gnidning med luften omkring sig, hvilket vil gøre farten mindre.
+Ved et opslag i en formelsamling, ser man at kraften som vindmodstanden virker med, er proportional med farten i anden. 
+Ved lave hastigheder er dette dog næsten det samme som at den er proportional med farten i første, og dette kan derfor være en okay antagelse af gøre sig i visse tilfælde\refMekanik{11}.
+
+
+\section{Nødvendig matematisk baggrundsteori}
 \subsection{Differentialligninger}
 \newcommand{\LosEks}{$ \{ c\cdot e^{kx}|c\in \mR \} $}%Bruges i sætningen
 Ved en differentialligning forstår vi en funktionnalligning hvor en funktionen minimum et sted er differentieret en gang.
@@ -63,11 +81,3 @@ Dermed ligger $h$ i \LosEks.
 Da er vist at hvis en funktion er en løsning til differentialligningen er ligger det også i \LosEks og det er også vist at hvis et element ligger i \LosEks da er det også en løsning. 
 Dermed er \LosEks den fuldstændige løsning til differentialligningen. 
 \end{proof}
-
-
-\section{Nødvendig baggrundsteori udenfor pensum}
-\subsection{Vindmodstand}\label{teori:vindmodstand}
-Når et objekt bevæger sig gennem luft eller en væske med en fart $v$, vil det have en gnidning med luften omkring sig, hvilket vil gøre farten mindre.
-Ved et opslag i en formelsamling, ser man at kraften som vindmodstanden virker med, er proportional med farten i anden. 
-Ved lave hastigheder er dette dog næsten det samme som at den er proportional med farten i første, og dette kan derfor være en okay antagelse af gøre sig i visse tilfælde\refMekanik{11}.
-%Ved lave hastigheder er denne formindskelse proportionel med hastigheden i første, men ved højere hastigheder vil den nærmere være proportional med hastigheden opløftet i anden potens\refMekanik{11}. 
