Fiksede spacing på indholdsfortegnelsen

--- a/main.tex
+++ b/main.tex
@@ -7,7 +7,12 @@
 \title{Dæmpede svingninger og differentialligninger}
 \begin{document}
 \maketitle
+
+\begin{singlespacing}
 \tableofcontents
+\end{singlespacing}
+\pagebreak
+
 \input{abstract}
 
 \input{Kapitel1/Indledning}
