--- a/preamble.sty
+++ b/preamble.sty
@@ -70,6 +70,7 @@
 \usetikzlibrary{calc,patterns,decorations.pathmorphing,decorations.markings}
 
 \linespread{1.2}
+\usepackage{setspace}
 
 
 \usepackage[left=2cm,right=2cm,top=2cm,bottom=2cm]{geometry}
