Fjernede referencer til exp3

--- a/Kapitel3/Introduktion.tex
+++ b/Kapitel3/Introduktion.tex
@@ -6,11 +6,9 @@ Jeg har udført tre delforsøg, som hvert i sær er tænkt til at afprøve et st
 \begin{itemize}
 	\item Svingning af lod i luft i kort
 	\item Svingning af lod i luft i længere tid
-	\item Svingning af lod i vand
 \end{itemize}
 
 Det første forsøg er ment til at skulle passe på differentialligningen uden dæmpningsled.
 
 Det andet forsøg er tænkt til at at passe med et dæmpningsled ved lav hastighed, og altså derfor med dæmpningsledet i 1. potens.
-
-Det sidste er ment til at have en relativt høj hastighed i forhold til stoffet det bevæger sig i og dermed fremprovokere at modellen vil passe bedre med dæmpningsledet i anden i stedet for i første. 
+Dette forsøg forsøger også at undersøge om en model med dæmpningsleder i anden vil fungere bedre end en hvor det er i første. 
