--- a/abstract.tex
+++ b/abstract.tex
@@ -8,7 +8,7 @@ It describes the complete solution to the second order linear homogeneous differ
 
 Having explained how to solve the differential equation, it then examines experiments meant to test whether the model of differential equations proposed about the motion are accurate.
 
-Through 3 experiments it finds, that the second order linear homogeneous differential equation is a good description of the motion.
+Through two experiments it finds, that the second order linear homogeneous differential equation is a good description of the motion.
 However, it also finds that the description is not perfect and then proposes an improvement of the model that makes the equations non-linear.
 It argues why this improved model describes the motion better but it also shows why the model is a much harder mathematical problem to solve. 
 
