Startede på diskussion af forsøgene

--- a/main.tex
+++ b/main.tex
@@ -30,6 +30,7 @@
 \input{Kapitel3/Eksperiment1}
 \input{Kapitel3/Eksperiment2}
 \input{Kapitel3/Eksperiment3}
+\input{Kapitel3/Konklusion}
 
 \input{Kapitel4/Introduktion}
 
