--- a/main.tex
+++ b/main.tex
@@ -32,6 +32,8 @@
 \input{Kapitel3/Eksperiment3}
 \input{Kapitel3/Konklusion}
 
+\input{Sammenfatning}
+
 \input{Kapitel4/Introduktion}
 
 \input{bibliografi}
