--- a/main.tex
+++ b/main.tex
@@ -30,6 +30,8 @@
 \input{Kapitel3/Eksperiment1}
 \input{Kapitel3/Eksperiment2}
 
+\input{Sammenfatning}
+
 \input{Kapitel4/Introduktion}
 
 \input{bibliografi}
