Rettelser til kapitel 1

--- a/Kapitel1/Indledning.tex
+++ b/Kapitel1/Indledning.tex
@@ -1,15 +1,20 @@
 \chapter{Introduktion af problemet}
-Jeg vil i denne opgave tage udgangspunkt i den bevægelse et lod har når det hænges op i en fjeder og sættes i svingninger.
+Mange steder indenfor fysikken er svingninger helt centrale. 
+De ses i alt fra lyd og musik, til broer som Tacoma bridge der gik i egensvingning. 
+Dette gør at svingninger er et fænomen der er værd at studere for sig selv isoleret. 
+Denne opgave kigger på den harmoniske svingning og på dæmpningen af denne.
 
-Jeg vil forsøge at opstille en matematisk differentialligningsmodel der kan beskrive bevægelsen.
-Dernæst vil jeg forsøge at bruge denne model til at kunne beskrive direkte hvor loddet vil befinde sig til et bestemt tidspunkt. 
-Dette vil kræve at jeg kan løse de opsatte differentialligninger. 
+Jeg vil tage udgangspunkt, i den bevægelse et lod har, når det hænges op i en fjeder og sættes i svingninger.
+
+Jeg vil forsøge at opstille en matematisk differentialligningsmodel, der kan beskrive bevægelsen.
+Dernæst vil jeg forsøge at bruge denne model, til at kunne beskrive direkte hvor loddet vil befinde sig til et bestemt tidspunkt. 
+Dette vil kræve, at jeg kan løse de opsatte differentialligninger. 
 For at finde denne løsning, vil jeg behandle problemet mere generelt ved brug af matematisk analyse. 
 
 Jeg vil derefter udnytte de matematiske løsninger til at beskrive bevægelsen.
-Disse modeller vil jeg da prøve af eksperimentelt for at undersøge hvor godt de passer. 
+Disse modeller vil jeg da prøve af eksperimentelt, for at undersøge hvor godt de passer. 
 
-Til sidst vil jeg kigge på, hvordan den teori jeg er kommet frem til, kan bruges til at analysere affjedringen i en bil. 
+Til sidst vil jeg kigge på, hvordan den teori jeg er kommet frem til, kan bruges til at analysere affjedringen af en bil. 
 \vspace{1cm}
 
 For at kunne lave denne opgave, vil der blive brug for noget baggrundteori både fra fysikken og matematikken. 
