--- a/Kapitel1/FysikBaggrund.tex
+++ b/Kapitel1/FysikBaggrund.tex
@@ -3,14 +3,14 @@
 Når man hiver i en fjeder, vil den have en kraft, modsatrettet den retning man hiver, der er proportional med hvor meget man har strukket fjederen\refFysA{286}. 
 Dette giver anledning til formlen 
 $$F =k\cdot x$$
-hvor $x$ er den længde som fjederen er strukket, $F$ er kraften som fjederen trækker med og $k$ er proportionalitetskonstanten. 
+hvor $x$ er den længde som fjederen er strukket, $F$ er kraften som fjederen trækker med, og $k$ er proportionalitetskonstanten. 
 $k$ kaldes i denne sammenhæng for fjederkonstanten.
 
 \subsection{Newtons anden lov}\label{teori:Newtons anden lov}
-Newtons anden lov fortæller ud fra den kraft et objekt påvirkes med og dets masse, hvor stor meget objektet vil accelerere. 
-Den siger, at massen ganget med accelerationen af et objekt giver den kraft, som objektet bliver påvirket med\refFysA{217}.
+Newtons anden lov fortæller ud fra den kraft et objekt påvirkes med og dets masse, hvor meget objektet vil accelerere. 
+Den siger, at massen ganget med accelerationen af et objekt, giver den kraft, som objektet bliver påvirket med\refFysA{217}.
 
 \subsection{Vindmodstand}\label{teori:vindmodstand}
 Når et objekt bevæger sig gennem luft eller en væske med en fart $v$, vil det have en gnidning med luften omkring sig, hvilket vil gøre farten mindre.
 Ved et opslag i en formelsamling, ser man at kraften som vindmodstanden virker med, er proportional med farten i anden. 
-Ved lave hastigheder er dette dog næsten det samme som at den er proportional med farten i første, og dette kan derfor være en okay antagelse af gøre sig i visse tilfælde\refMekanik{11}.
+Ved lave hastigheder er dette dog næsten det samme som, at den er proportional med farten i første, og dette kan derfor være en okay antagelse af gøre sig i visse tilfælde\refMekanik{11}.
